Abstract configured discovery servers behind ServiceInstanceList
This change refactors the code and introduces a ServiceInstanceListLoadBalancerFactory and separate DiscoveryClientLoadBalancerFactory to allow for configuration backed definition of services instances and thus allow load balancing with a Eureka or Consul cluster in the future.